import { createMockStore } from 'src/__testHelpers__/mockStore';
import * as abTesting from '../abTesting';

jest.mock('../helpers/sparkpostApiRequest', () => jest.fn((a) => a));

describe('Action Creator: A/B Testing', () => {
  let mockStore;

  beforeEach(() => {
    mockStore = createMockStore({});
  });

  it('should dispatch a list action', () => {
    mockStore.dispatch(abTesting.listAbTests());
    expect(mockStore.getActions()).toMatchSnapshot();
  });

  it('should dispatch a create draft action', () => {
    mockStore.dispatch(abTesting.createAbTestDraft({ id: 'ab-test-id' }));
    expect(mockStore.getActions()).toMatchSnapshot();
  });

  it('should dispatch a get test action', () => {
    mockStore.dispatch(abTesting.getAbTest({ id: 'test_one', version: 2, subaccountId: 101 }));
    expect(mockStore.getActions()).toMatchSnapshot();
  });

  it('should dispatch a get latest test version action', () => {
    mockStore.dispatch(abTesting.getLatestAbTest({ id: 'test_one', subaccountId: 101 }));
    expect(mockStore.getActions()).toMatchSnapshot();
  });

  it('should dispatch an update draft action', () => {
    mockStore.dispatch(abTesting.updateDraft('data', { id: 'test_one', subaccountId: 101 }));
    expect(mockStore.getActions()).toMatchSnapshot();
  });
});
