// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: A/B Testing should dispatch a create draft action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": undefined,
      "headers": Object {},
      "method": "POST",
      "url": "/ab-test/draft",
    },
    "type": "CREATE_AB_TEST_DRAFT",
  },
]
`;

exports[`Action Creator: A/B Testing should dispatch a get latest test version action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "GET",
      "params": Object {
        "version": undefined,
      },
      "showErrorAlert": false,
      "url": "/ab-test/test_one",
    },
    "type": "GET_LATEST_AB_TEST",
  },
]
`;

exports[`Action Creator: A/B Testing should dispatch a get test action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "GET",
      "params": Object {
        "version": 2,
      },
      "showErrorAlert": false,
      "url": "/ab-test/test_one",
    },
    "type": "GET_AB_TEST",
  },
]
`;

exports[`Action Creator: A/B Testing should dispatch a list action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/ab-test",
    },
    "type": "LIST_AB_TESTS",
  },
]
`;

exports[`Action Creator: A/B Testing should dispatch an update draft action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": "data",
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "PUT",
      "url": "/ab-test/draft/test_one",
    },
    "type": "UPDATE_AB_TEST_DRAFT",
  },
]
`;
